<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:background="@color/colorPrimary"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/toolbar">

        <Button
                android:id="@+id/my_profile_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:drawable/ic_menu_revert"
                tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="16dp"
                tools:ignore="MissingConstraints"/>
        <TextView
                android:foregroundGravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile_title"
                android:contentDescription=""
                app:fontFamily="@font/cabin"
                android:layout_marginLeft="30dp"
                tools:layout_editor_absoluteY="19dp"
                tools:layout_editor_absoluteX="120dp" android:textSize="24sp"/>
    </android.support.v7.widget.Toolbar>


    <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="172dp"
            android:layout_height="175dp"
            android:src="@mipmap/mfuon"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139"
            app:civ_shadow_color="#8BC34A" tools:ignore="MissingConstraints"
            app:layout_constraintHorizontal_bias="0.497"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.424" app:fontFamily="@font/cabin"
            android:textColor="@color/font_color"
            android:textSize="24sp"
    />
    <View android:layout_width="345dp"
          android:layout_height="0.01dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.467"
          android:background="@color/colorAccent"
          tools:ignore="MissingConstraints"/>

    <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.539"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_height="39dp"
            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.6">
        <TextView
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/track"
                android:gravity="end"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="Android"
        />

    </LinearLayout>
    <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.618"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_height="39dp"
            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.6">
        <TextView
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/country"
                android:gravity="end"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/country_name"
        />

    </LinearLayout>
    <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.693"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_height="39dp"
            tools:ignore="MissingConstraints">
        <TextView
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/email"
                android:gravity="end"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/email_address"
        />

    </LinearLayout>
    <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.768"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_height="39dp"
            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.6">
        <TextView
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/phone"
                android:gravity="end"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/phone_number"
        />

    </LinearLayout>
    <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_height="39dp"
            tools:ignore="MissingConstraints">
        <TextView
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/slack"
                android:gravity="end"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:fontFamily="@font/cabin"
                android:textColor="@color/colorAccent"
                android:text="@string/slack_handle"
        />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>