<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="131dp"
            android:layout_height="121dp" app:srcCompat="@mipmap/andela"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.178"
            android:id="@+id/imageView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" app:fontFamily="@font/cabin"
            android:textColor="@color/font_color"
            android:textSize="24sp"
    />

    <Button
            android:id="@+id/about_alc"
            android:text="@string/about_alc"
            android:fontFamily="@font/cabin"
            app:layout_constraintCircleRadius="4dp"
            android:background="@drawable/round_button"
            android:layout_width="248dp"
            android:layout_height="58dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.599"

            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.496"/>

    <Button
            android:id="@+id/my_profile"
            android:text="@string/my_profile"
            android:fontFamily="@font/cabin"
            app:layout_constraintCircleRadius="4dp"
            android:background="@drawable/round_button"
            android:layout_width="248dp"
            android:layout_height="58dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.714"

            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.497"/>



</android.support.constraint.ConstraintLayout>